fixed grant whitespace problem, bottom out img size

--- a/css/main.scss
+++ b/css/main.scss
@@ -206,6 +206,12 @@ firstp {
 }
 
 /*============================================== PROJECT PAGE ================================ */
+@media (min-width: 00px){
+	.project-img-sm{
+		max-height: 80px;
+	}
+}
+
 @media (min-width: 280px){
 	.project-img-sm{
 		max-height: 120px;
